[gd_scene load_steps=7 format=3 uid="uid://bb5hy4i5n52is"]

[ext_resource type="Texture2D" uid="uid://dvinnfpwutjr3" path="res://Art/Sprites/upgrade icon.png" id="1_4xxgp"]
[ext_resource type="Script" path="res://Scripts/Upgrades/upgrade.gd" id="1_k0v43"]
[ext_resource type="FontFile" uid="uid://blveai4y2nwq5" path="res://Art/Fonts/Pikzel-Regular.ttf" id="3_giw1o"]
[ext_resource type="Texture2D" uid="uid://7ppsa5tfac3k" path="res://Art/Sprites/upgrade icon icon.png" id="3_xnul3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i330d"]
size = Vector2(14, 14)

[sub_resource type="CircleShape2D" id="CircleShape2D_u4ik1"]
radius = 22.0

[node name="Upgrade" type="Area2D"]
use_parent_material = true
collision_layer = 0
collision_mask = 4
script = ExtResource("1_k0v43")
metadata/Icon = ExtResource("1_4xxgp")
metadata/Title = "Upgrade"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_i330d")

[node name="Sprite2D" type="Sprite2D" parent="."]
use_parent_material = true
texture = ExtResource("3_xnul3")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_u4ik1")

[node name="UpgradeName" type="RichTextLabel" parent="."]
use_parent_material = true
clip_contents = false
offset_left = -49.0
offset_top = -23.0
offset_right = 49.0
offset_bottom = -10.0
theme_override_colors/default_color = Color(0.956863, 0.956863, 0.956863, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_fonts/normal_font = ExtResource("3_giw1o")
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
text = "[center]UPGRADE NAME"
scroll_active = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
